--- a/sipStyles.css
+++ b/sipStyles.css
@@ -22,9 +22,9 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('path/to/your/image.png');
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-image: url('https://github.com/RacyRiyaz/ZCalc/blob/main/BGSB.png');
+  background-size: cover; /* Adjusts the background image to cover the entire body */
+  background-repeat: no-repeat; /* Prevents the background image from repeating */
   padding-top: 10px; /* Adjusted padding */
   margin-block-end: 0; /* Adjust margin as needed */
   border: none; /* Ensure no border */
