--- a/sipStyles.css
+++ b/sipStyles.css
@@ -22,6 +22,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background: url('https://raw.githubusercontent.com/RacyRiyaz/ZCalc/main/BGSB.png') center center/cover no-repeat;
   background-size: cover; /* Adjusts the background image to cover the entire body */
   background-repeat: no-repeat; /* Prevents the background image from repeating */
   padding-top: 10px; /* Adjusted padding */
